--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "group-project-v2": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sequelize": "^6.37.3"
