--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "nodemon app.js -w app.js -w src",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "seed": "node scripts/seed.js"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "bootstrap": "^5.3.3",
     "group-project-v2": "file:",
     "morgan": "^1.10.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0",
     "sequelize": "^6.37.3",
     "vite-express": "^0.18.0"
   },
