--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "seed": "node scripts/seed.js"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "bootstrap": "^5.3.3",
     "group-project-v2": "file:",
     "morgan": "^1.10.0",
+    "pg": "^8.12.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
