--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "seed": "node scripts/seed.js"
+    "seed": "node scripts/seed.js",
+    "initdb": "dropdb --if-exists travelBlog && createdb travelBlog"
   },
   "dependencies": {
+    "axios": "^1.3.1",
     "bootstrap": "^5.3.3",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
