--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "seed": "node scripts/seed.js"
   },
   "dependencies": {
+    "axios": "^1.3.1",
     "bootstrap": "^5.3.3",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
