--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "initdb": "dropdb --if-exists travelBlog && createdb travelBlog"
   },
   "dependencies": {
+    "aws-sdk": "^2.1681.0",
     "axios": "^1.3.1",
     "bootstrap": "^5.3.3",
     "express": "^4.19.2",
@@ -22,6 +23,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-images-uploading": "^3.1.7",
     "react-router-dom": "^6.26.0",
     "sequelize": "^6.37.3",
     "vite-express": "^0.18.0"
